--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A friendly process.argv parser for Node.js",
   "dependencies": {
     "merge": "1.1.3",
+    "node-v8-clone": "^0.6.2",
     "param-case": "0.1.0",
     "pluralize": "0.0.10"
   },
