--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "dependencies": {
     "merge": "1.1.3",
     "node-v8-clone": "^0.6.2",
-    "param-case": "0.1.0",
-    "pluralize": "0.0.10"
+    "param-case": "0.1.0"
   },
   "devDependencies": {
     "mocha": "1.20.1"
