--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "A friendly process.argv parser for Node.js",
   "dependencies": {
+    "deepmerge": "^0.2.7",
     "merge": "1.1.3",
     "node-v8-clone": "^0.6.2",
     "param-case": "0.1.0"
