--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "node-argv-parser",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A friendly process.argv parser for Node.js",
   "dependencies": {
-    "deepmerge": "^0.2.7",
+    "deepmerge": "0.2.7",
     "merge": "1.1.3",
-    "node-v8-clone": "^0.6.2",
     "param-case": "0.1.0"
   },
   "devDependencies": {
@@ -18,7 +17,6 @@
     "node": ">= 0.10.0"
   },
   "repository": {
-    "type": "git",
     "url": "git@github.com:justinfreitag/node-argv-parser.git"
   },
   "homepage": "https://github.com/justinfreitag/node-argv-parser",
